Update Contrast issue

--- a/style.css
+++ b/style.css
@@ -229,7 +229,12 @@ button:hover {
 }
 
 .card {
-  background-image: url("./images/card-bg.png");
+  background-image: linear-gradient(
+      180.45deg,
+      rgba(38, 38, 38, 0) 0.75%,
+      rgba(38, 38, 38, 0.9) 61.94%
+    ),
+    url("./images/card-bg.png");
   background-repeat: no-repeat;
   background-size: cover;
   height: 24.125rem;
@@ -289,7 +294,7 @@ button:hover {
   font-size: 0.938rem;
   line-height: 1.25rem;
   padding: 0.625rem 0.75rem;
-  border: 1px solid #8993a4;
+  border: 1px solid #0e46a7;
   color: #fff;
   background: rgba(0, 0, 0, 0.24);
 }
